client-app/src/components/Header.module.scss
@import "styles/colors";

.header {
    background-color: $dark-grey;
    filter: drop-shadow(4px 4px 1px rgba(0, 0, 0, 0.25));

    display: flex; /* or inline-flex */
    flex-flow: row wrap;
    justify-content: space-between;

    position: relative;
    height: 10rem;
    margin: 20px;
    left: 0px;

    border-radius: 15px;

    position: relative;
}

.logo {
    height: 60%;
    margin-left: 2rem;
    align-self: center;
  }

.menu{
    justify-content: space-between;
    display: flex; /* or inline-flex */
    flex-flow: row;
    justify-content: space-between;
    align-items: left;
    width: 34rem;
}

.menuButton {
    color: $light-grey;
    font-size: 1.5em;
    size: "30px";
    margin-left: "38px";
    a:hover {
        background-color: $green;
    }
}

.toolbar {
    display: flex;
    justify-content: space-between;
    flex-flow: row wrap;
}

